# Master-of-Cybersecurity

./: README.md
2020S1 FIT9132 Database/Assignment 1 - conceptual, logical, & normalisation/: mau_schema.sql
2020S1 FIT9136 Python/Assignment 1 - Update System/: task1.py
2020S1 FIT9136 Python/Assignment 2 - COVID Model/: task2.py  task3.py
2020S1 FIT9137 Networks/Assignment 1 - Home Network Report/: MBI Technical Report.docx
2020S1 FIT9137 Networks/Assignment 2 - Network Design and bug fixing/: assignment2-s1-2020-x31291252_.imn
2020S2 FIT5003 Software Security/Assignment 2 - SQLi, XSS, & CSRF/: A2T1.py  A2T2.js  FIT5003 Assignment 2 Report.docx  task_3_MySQLHandler.php
2020S2 FIT5057 Project Management/Assignment 2 - Group Project/: Assignment 2B Report.docx
2020S2 FIT5125 IT Research/Assignment 1 - Research Methods/: FIT 5125 Assignment 1.docx
2020S2 FIT5125 IT Research/Assignment 2 - Survey & Interview/: Week 5 Assignment Template.docx
2020S2 FIT5125 IT Research/Assignment 3 - Matlab & Statistics/: 5125A3_W8.docx
2020S2 FIT5163 Infomation Security/: exam mock.rar
2021S1 FIT5124 Advanced Security Topics/A1/: Book1.xlsx  (+4 more)
2021S1 FIT5124 Advanced Security Topics/A2/conversion/conversion/: CMakeLists.txt
2021S1 FIT5124 Advanced Security Topics/A2/conversion/conversion/cmake/: conversion-config.cmake
2021S1 FIT5124 Advanced Security Topics/A2/conversion/conversion/secret_sharing/: additive_party.h  secret_sharing.h
2021S1 FIT5124 Advanced Security Topics/A2/conversion/conversion/test/: A2Y.cpp  Y2A.cpp
anz/: Task 1 - Answer Template.docx
(+191 files in other folders)
